# TG_parser

./: .env.example  .gitignore  AFTER_DEPLOYMENT.md  CHANGELOG.md  COMPLETION_SUMMARY.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REVIEW_COMPLETE.md  DOCUMENTATION_UPDATE_SESSION24.md  Dockerfile  ENV_VARIABLES_GUIDE.md  LICENSE  LLM_SETUP_GUIDE.md  MIGRATION_GUIDE_SQLITE_TO_POSTGRES.md  MIGRATION_GUIDE_v1.1_to_v1.2.md  MIGRATION_GUIDE_v2_to_v3.md  MULTI_CHANNEL_GUIDE.md  NEXT_STEPS.md  OUTPUT_FORMATS.md  PROCESSING_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  PYTHON_SETUP_QUICK_GUIDE.md  QUICKSTART_v1.2.md  README.md  REAL_CHANNEL_TEST_RESULTS.md  SESSION12_AND_13_PREP_COMPLETE.md  SESSION12_COMPLETE.md  SESSION13_READINESS.md  SESSION22_SUMMARY.md  SESSION23_COMPLETE_SUMMARY.md  SESSION23_DOCUMENTATION_SUMMARY.md  SESSION23_DOCUMENTATION_UPDATE.md  SESSION23_SUMMARY.md  SESSION23_USER_CHANGES.md  SESSION24_COMPLETE_SUMMARY.md  SESSION24_PREPARATION.md  SESSION_COMPLETE.md  TESTING_CHECKLIST.md  TESTING_INSTRUCTIONS.md  (+18 more)
docs/: DATA_FLOW.md  LLM_PROMPTS.md  USER_GUIDE.md  architecture.md  business-requirements.md  pipeline.md  product-overview.md  python-setup.md  tech-stack.md  technical-requirements.md  testing-strategy.md
migrations/: alembic.ini  env.py
output_final/: topic_topic_tg_labdiagnostica_logical_post_878.json  topic_topic_tg_labdiagnostica_logical_post_880.json  topic_topic_tg_labdiagnostica_logical_post_883.json  topic_topic_tg_labdiagnostica_logical_post_891.json  topic_topic_tg_labdiagnostica_logical_post_940.json  (+5 more)
(+222 files in other folders)
