[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg_parser"
version = "3.0.0-alpha.3"
description = "Telegram message parser for knowledge base extraction"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "jsonschema>=4.0",
    "httpx>=0.27",
    "typer>=0.12",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "telethon>=1.36",
    "structlog>=24.0",
    # HTTP API (v2.0)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
tg-parser = "tg_parser.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["tg_parser*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
